[package]
name = "mrpump"
version = "0.1.1"
edition = "2024"
description = "A simple TCP socket proxy"
license = "MIT"
authors = ["mrpump developers"]

[dependencies]
tokio = { version = "1.49", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
humansize = "2"
directories = "6"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-journald = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"

[package.metadata.deb]
maintainer = "mrpump developers"
copyright = "2026, mrpump developers"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple, lightweight TCP socket proxy written in Rust.
It allows forwarding TCP traffic from one address to another."""
section = "net"
priority = "optional"
assets = [
    ["target/release/mrpump", "/usr/bin/mrpump", "755"],
    ["dist/mrpump.service", "/lib/systemd/system/mrpump.service", "644"],
    ["dist/config.yaml", "/etc/mrpump/config.yaml", "644"],
]
maintainer-scripts = "dist/debian/"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/mrpump", dest = "/usr/bin/mrpump", mode = "755" },
    { source = "dist/mrpump.service", dest = "/usr/lib/systemd/system/mrpump.service", mode = "644" },
    { source = "dist/config.yaml", dest = "/etc/mrpump/config.yaml", mode = "644", config = true },
]
post_install_script = """
/usr/bin/getent group mrpump >/dev/null || /usr/sbin/groupadd -r mrpump
/usr/bin/getent passwd mrpump >/dev/null || /usr/sbin/useradd -r -g mrpump -d /var/lib/mrpump -s /sbin/nologin -c "mrpump user" mrpump
/usr/bin/mkdir -p /var/lib/mrpump
/usr/bin/chown mrpump:mrpump /var/lib/mrpump
"""
